...
            android:layout_height="300dp"
            android:padding="8dp"
            android:src="@drawable/happy_baking"
            android:visibility="gone" />

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/player_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="8dp" />


        <TextView
...
